--- a/about.html
+++ b/about.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cake Lovers</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <!-- internal css -->
+    <style>
+      p {
+        font-family:fantasy;
+        text-shadow: 2px 2px 4px rgba(red, green, blue, alpha);
+      }
+    </style>
   </head>
   <body>
     <!-- header section -->
@@ -15,46 +22,34 @@
             src="https://i.pinimg.com/474x/a2/a1/8e/a2a18e5b9f1fc6bf8808a8f1ca9f7a8e.jpg" width="100" height="80" alt="cake" class="logo"/>
         </a>
         <nav class="nav">
+          <a href="index.html">Home</a>  
           <a href="recipes.html">Recipes</a>
-          <a href="classes.html">Classes</a>
           <a href="about.html">About</a>
         </nav>
       </div>
     </header>
   <!-- main body -->
     <main>
-    <section class="extra">
-        <img src="images/gip.gif" alt="Baking GIF">
-        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores in facilis vel, libero nesciunt quidem nulla ad. Veritatis incidunt facilis eligendi necessitatibus dolore optio nihil obcaecati fuga beatae! Doloribus, natus!</p> -->
-         <div class="newsletter">
-        <h2>Join Our Newsletter</h2>
-        <form>
-        <input type="email" placeholder="Enter your email" required>
-        <button type="submit">Subscribe</button>
-        </form>
-        </div>
-    </section>
-    <section class="submit-recipe">
-        <h1>Submit Your Recipe</h1>
-        <form>
-        <input type="text" placeholder="Your Name" required>
-        <input type="email" placeholder="Your Email" required>
-        <input type="text" placeholder="Recipe Title" required>
-        <textarea placeholder="Ingredients" required></textarea>
-        <textarea placeholder="Steps" required></textarea>
-        <button type="submit">Submit Recipe</button>
-        </form>
-    </section>
-
-    <section class="newsletter">
-        <h2>Join Our Newsletter For More Recipes</h2>
-        <form>
-        <input type="email" placeholder="Enter your email" required>
-        <button type="submit">Subscribe</button>
-        </form>
-    </section>
+        <section class="extra">
+            <img src="images/gip.gif" alt="Baking GIF">
+            <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores in facilis vel, libero nesciunt quidem nulla ad. Veritatis incidunt facilis eligendi necessitatibus dolore optio nihil obcaecati fuga beatae! Doloribus, natus!</p> -->
+            <div class="card">
+            <div class="card-text">
+               <h2>CAKE LOVERS</h2>
+                <p>Stay updated with our latest recipes, tips, and special offers! Join our world and never miss a delicious update.</p>
+            <hr><br>
+            <div class="newsletter">
+            <h2>Join Our Newsletter</h2>
+            <form>
+            <!-- inline css -->
+            <input type="email" placeholder="Enter your email" required style="text-align: center;">
+            <button type="submit">Subscribe</button>
+            </form>
+            </div>
+        </section>
     </main>
-
-
+    <footer class="footer">
+    <p>2025 Cake Lovers</p>
+  </footer>
   </body>
 </html>
