--- a/index.html
+++ b/index.html
@@ -12,11 +12,16 @@
       <div class="navbar">
         <a href="index.html">
           <img
-            src="https://i.pinimg.com/474x/a2/a1/8e/a2a18e5b9f1fc6bf8808a8f1ca9f7a8e.jpg" width="100" height="80" alt="cake" class="logo"/>
+            src="https://i.pinimg.com/474x/a2/a1/8e/a2a18e5b9f1fc6bf8808a8f1ca9f7a8e.jpg"
+            width="100"
+            height="80"
+            alt="cake"
+            class="logo"
+          />
         </a>
         <nav class="nav">
+          <a href="index.html">Home</a>
           <a href="recipes.html">Recipes</a>
-          <a href="classes.html">Classes</a>
           <a href="about.html">About</a>
         </nav>
       </div>
@@ -29,6 +34,12 @@
       <section class="top-elements">
         <div class="recipe-grid">
           <div class="recipe-card">
+            <img src="images/imge1.jpg" alt="cake" />
+            <h3>Birthday Cake</h3>
+          </div>
+        </div>
+        <div class="recipe-grid">
+          <div class="recipe-card">
             <img src="images/imgw1.jpg" alt="cake" />
             <h3>Chocolate Cake</h3>
           </div>
@@ -37,73 +48,62 @@
         <div class="recipe-grid">
           <div class="recipe-card">
             <img src="images/imgq1.jpeg" alt="cake" />
-            <h3>Chocolate Cake</h3>
+            <h3>BD Chocolate Cake</h3>
           </div>
         </div>
 
         <div class="recipe-grid">
           <div class="recipe-card">
-            <img src="images/imge1.jpg" alt="cake" />
-            <h3>Chocolate Cake</h3>
+            <img src="images/p6.jpg" alt="cake" />
+            <h3>Marshmallow Cake</h3>
           </div>
         </div>
 
         <div class="recipe-grid">
           <div class="recipe-card">
-            <img src="images/imge1.jpg" alt="cake" />
-            <h3>Chocolate Cake</h3>
+            <img src="images/p1.jpg" alt="cake" />
+            <h3>Blue Cup Cakes</h3>
           </div>
         </div>
 
         <div class="recipe-grid">
           <div class="recipe-card">
-            <img src="images/imge1.jpg" alt="cake" />
-            <h3>Chocolate Cake</h3>
+            <img src="images/p3.jpg" alt="cake" />
+            <h3>Layer Chocolate Cake</h3>
           </div>
         </div>
-
-        <div class="recipe-grid">
-          <div class="recipe-card">
-            <img src="images/imge1.jpg" alt="cake" />
-            <h3>Chocolate Cake</h3>
-          </div>
-        </div>
-
       </section>
+
       <section class="ingredients">
         <div class="h1">
           <h1>Search By Flavor</h1>
         </div>
-
         <table>
           <tr>
             <td>Vanilla</td>
             <td>Backberry</td>
             <td>Marshmallow</td>
-            <td>Butterscotch</td>
           </tr>
           <tr>
             <td>Cherry</td>
             <td>Chocolate</td>
             <td>Coconut</td>
-            <td>Vanilla</td>
           </tr>
           <tr>
             <td>Carret</td>
             <td>Peach</td>
             <td>Lemon</td>
-            <td>Vanilla</td>
           </tr>
           <tr>
             <td>Oreo</td>
             <td>Blueberry</td>
-            <td>Vanilla</td>
-            <td>Vanilla</td>
+            <td>Butterscotch</td>
           </tr>
         </table>
       </section>
     </main>
   </body>
+  <!-- footer -->
   <footer class="footer">
     <p>2025 Cake Lovers</p>
   </footer>
