--- a/index.html
+++ b/index.html
@@ -44,28 +44,24 @@
             <h3>Chocolate Cake</h3>
           </div>
         </div>
-
         <div class="recipe-grid">
           <div class="recipe-card">
             <img src="images/imgq1.jpeg" alt="cake" />
             <h3>BD Chocolate Cake</h3>
           </div>
         </div>
-
         <div class="recipe-grid">
           <div class="recipe-card">
             <img src="images/p6.jpg" alt="cake" />
             <h3>Marshmallow Cake</h3>
           </div>
         </div>
-
         <div class="recipe-grid">
           <div class="recipe-card">
             <img src="images/p1.jpg" alt="cake" />
             <h3>Blue Cup Cakes</h3>
           </div>
         </div>
-
         <div class="recipe-grid">
           <div class="recipe-card">
             <img src="images/p3.jpg" alt="cake" />
@@ -73,7 +69,7 @@
           </div>
         </div>
       </section>
-
+      <!-- Table Section -->
       <section class="ingredients">
         <div class="h1">
           <h1>Search By Flavor</h1>
@@ -103,7 +99,7 @@
       </section>
     </main>
   </body>
-  <!-- footer -->
+  <!-- page footer -->
   <footer class="footer">
     <p>2025 Cake Lovers</p>
   </footer>
